1_phaseI/x_apacheds/test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sso
  name: apacheds
  labels:
    app: apacheds


spec:
  selector:
    matchLabels:
      app: apacheds
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: apacheds
    spec:
      containers:
      - name: apacheds
        image: "openmicroscopy/apacheds:0.6.0"
        livenessProbe:
          tcpSocket:
            port: 10389
          failureThreshold: 10
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        ports:
        - containerPort: 10389
          name: ldap
          protocol: TCP
        - containerPort: 10636
          name: ldaps
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 10389
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: apacheds-files
          mountPath: /var/lib/apacheds
          subPath: files
        - name: apacheds-ldif
          mountPath: /var/lib/apacheds/data.ldif
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: secret-volume
        secret:
          defaultMode: 420
          secretName: apacheds-secret
      - name: apacheds-files
        persistentVolumeClaim:
          claimName: apacheds-volume
      - name: apacheds-ldif
        configMap:
          name: apacheds-ldif
